@@ -5,6 +5,66 @@
 //! for basic math operations than comparable fixed-width integer types,
 //! since it can use optimizations from 128-bit integers on 64-bit
 //! architectures.
+//!
+//! ## Design
+//!
+//! This contains variable-time, optimized algorithms for smaller big integers,
+//! primarily, 256-bit integers. It supports a `no_std` environment, requiring
+//! no allocation with all integers stored on the stack.
+//!
+//! ## Features
+//!
+//! This crate is optimized for small variants of big integers, but a few
+//! additional types can be enabled via the following features:
+#![cfg_attr(feature = "i384", doc = "- `i384`: Add the 384-bit [`I384`] and [`U384`] types.")]
+#![cfg_attr(not(feature = "i384"), doc = "- `i384`: Add the 384-bit `I384` and `U384` types.")]
+#![cfg_attr(feature = "i512", doc = "- `i512`: Add the 512-bit [`I512`] and [`U512`] types.")]
+#![cfg_attr(not(feature = "i512"), doc = "- `i512`: Add the 512-bit `I512` and `U512` types.")]
+#![cfg_attr(feature = "i1024", doc = "- `i1024`: Add the 1024-bit [`I1024`] and [`U1024`] types.")]
+#![cfg_attr(not(feature = "i1024"), doc = "- `i1024`: Add the 1024-bit `I1024` and `U1024` types.")]
+//!
+//! If you need larger integers, [`crypto-bigint`] has high-performance
+//! addition, subtraction, and multiplication. With integers with a large
+//! number of bits, it uses Karatsuba multiplication, which is significantly
+//! asymptotically faster.
+//!
+//! ## Use Case
+//!
+//! [`i256`] is for a very specific purpose: relatively high-performance,
+//! fixed-sized 256-bit integers. This is dependent on support for native 64-bit
+//! integer multiplies on the architecture, and highly benefits from 64-bit to
+//! 128-bit widening multiplies (supported on `x86_64`). For example, on
+//! `x86_64`, we can get 256-bit multiplications in at worst 10 multiplies and
+//! 15 adds, and significantly faster in most cases. However, using 256-bit x
+//! 64-bit multiplication, we can get a worst case scenario in 5 `mul`, 3 `add`,
+//! and 6 `sub` instructions, with 2x+ better performance on both `x86_64` and
+//! `aarch64`.
+//!
+//! This will, for obvious reasons, not support significantly larger type sizes.
+//! It is optimized only for a smaller number of bits.
+//!
+//! - [`bnum`]: Arbitrary-precision, fixed-width, big integer support.
+//! - [`crypto-bigint`]: Constant-time, arbitrary-precision, fixed-width, big
+//!   integer support
+//! suitable for cryptographically secure applications.
+//! - [`num-bigint`], [`malachite`], or [`rug`]: Dynamic-width big integers with
+//!   high-
+//! performance calculations with very large integers.
+
+//! Specifically, [`i256`] has optimizations that would be considered
+//! anti-features for these libraries: better performance for smaller values
+//! (variable-time calculations) and operations with native, scalar values. This
+//! is particularly useful when doing incremental operations with [native
+//! integers][`u64`], with performance improvements greater than 2 fold in many
+//! cases,
+//!
+//! [`crypto-bigint`]: https://crates.io/crates/crypto-bigint
+//! [`bnum`]: https://crates.io/crates/bnum
+//! [`num-bigint`]: https://crates.io/crates/num-bigint
+//! [`malachite`]: https://crates.io/crates/malachite
+//! [`rug`]: https://crates.io/crates/rug
+//! [`u64`]: https://doc.rust-lang.org/std/primitive.u64.html
+//! [`i256`]: https://crates.io/crates/i256
 
 #![allow(unused_unsafe)]
 #![cfg_attr(feature = "lint", warn(unsafe_op_in_unsafe_fn))]
@@ -90,6 +150,7 @@ define!(
     signed_wide => i128,
     bits => 256,
 );
+#[cfg(feature = "i384")]
 define!(
     unsigned => U384,
     signed => I384,
@@ -97,6 +158,7 @@ define!(
     signed_wide => i128,
     bits => 384,
 );
+#[cfg(feature = "i512")]
 define!(
     unsigned => U512,
     signed => I512,
@@ -104,6 +166,7 @@ define!(
     signed_wide => i128,
     bits => 512,
 );
+#[cfg(feature = "i1024")]
 define!(
     unsigned => U1024,
     signed => I1024,
