@@ -7,6 +7,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+- Move `I384`, etc. under the `i384`, `i512`, and `i1024` features.
+
 ## [0.1.12] 2024-12-30
 
 ## Added
